# deep_sort

./: CMakeLists.txt
config/: deepsort_config.txt
src/app/: VideoTracker.cpp  VideoTracker.h  utility.h
src/features/: FeatureTensor.cpp  FeatureTensor.h  dataType.h  model.cpp  model.h
src/matching/: tracker.cpp
